# OpenDataMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py
src/odmcp/: __template__.py  cli.py  client.py
src/odmcp/providers/: __template__.py  ch_sbb.py  sbb.py
src/osmcp/: cli.py  client.py
src/osmcp/providers/: sbb.py  utils.py
tests/: test_cli.py  test_data_sbb_ch.py  test_utils.py
tests/providers/: test_data_sbb_ch.py  test_utils.py
